<resources>
    <string name="app_name">EATSY</string>
    <string name="title">Title</string>
    <string name="sentence"> Find your food companion </string>
    <string name="btn_mainpage"> LOG IN </string>
    <string name="profile_header"> Profile </string>
    <string name="change_pic"> CHANGE PROFILE </string>
    <string name="log_Out">SIGN OUT</string>
    <string name="nameOnProfile">Name</string>
    <string name="nameToDisplay">Name</string>
    <string name="emailOnProfile">Email</string>
    <string name="emailToDisplay">Email</string>
    <string name="search_page"> Search </string>
    <string name="free_search"> FREE </string>
    <string name="exchange_search"> EXCHANGE </string>
    <string name="buy_search"> BUY </string>
    <string name="add_dashboard"> ADD </string>
    <string name="profile_dashboard"> Profile </string>
    <string name="food_dashboard"> Food </string>
    <string name="location_map"> Location </string>
    <string name="item_post_title">The title of the food</string>
    <string name="item_post_description">there should be some descriptions for this food</string>
    <string name="item_post_username">username</string>
    <string name="donate_addPage"> Donate </string>
    <string name="giving"> Give away free food</string>
    <string name="exchange_addPage"> Exchange </string>
    <string name="exchange_swap">Swap what you have for what you need</string>
    <string name="wanted_addPage"> Wanted </string>
    <string name="wanted_ask"> Ask for something</string>
    <string name="Log_in"> Log in</string>
    <string name="email_on_login"> Email </string>
    <string name="pswrd_on_login"> Password </string>
    <string name="begin_login"> BEGIN </string>
    <string name="add_up_to_10_images">Add your pictures</string>
    <string name="description">Description</string>
    <string name="pick_up_times">Pick-up times</string>
    <string name="free_food">Free food</string>
    <string name="quantity">Quantity</string>
    <string name="e_g_2xtins_of_veg_soup_bb_dec_2023">e.g. 2xtins of veg soup, BB Dec 2023</string>
    <string name="address">Address</string>
    <string name="e_g_before_may_25th_6pm">e.g. Before May 25th, 6pm</string>
    <string name="e_g_16_northbourn_avenue_act">e.g. 16 Northbourn Avenue, ACT</string>
    <string name="e_g_pizza">e.g. Pizza</string>
    <string name="fresh_veges">Fresh Vegetables</string>
    <string name="describe_your_need">Describe your need</string>
    <string name="title_postcard"> Username </string>
    <string name="post_title"> TitleOfPost </string>
    <string name="post_description">Here is the description of the post
    \nsinking your teeth into a juicy burger, the bun lightly toasted,
    the beef patty perfectly seared, topped with melted cheddar, fresh lettuce,
    ripe tomatoes, and tangy pickles, all held together by a creamy, slightly spicy sauce.
        It\'s a mouthwatering experience in every bite.</string>
    <string name="want_something"> want some thing </string>
    <string name="remain_time"> 2 remain and meet at time </string>
    <string name="address_post">11 harold white ave, coombs, ACT 2611</string>
    <string name="timeOfPost"> posted in 30 minutes </string>
    <string name="radiobtn1"> 1 </string>
    <string name="radiobtn2"> 2 </string>
    <string name="radiobtn3"> 3 </string>
    <string name="radiobtn4"> Other </string>
    <string name="other_postDonate">Other </string>
    <string name="choosebtn"> choose </string>
    <string name="post_btn"> Post </string>
    <string name="cont_descri"> Go back </string>
    <string name="cameraImage"> Open Album </string>
    <string name="exch_want"> Want </string>
    <string name="eg_want"> eg: Canned tomatoes</string>
    <string name="three_eggs_wanted"> Three eggs </string>
    <string name="address_wanted"> Turner, ACT </string>
    <string name="food_detail">Food Detail</string>


    <string name="select_by_botton_below">select by botton below</string>
</resources>