<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/header_post"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-110dp"
        android:background="@drawable/dash_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />
    <TextView
        android:id="@+id/banner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:text="@string/wanted_addPage"
       android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageButton
        android:id="@+id/leftArrowButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/leftarrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cont_descri"/>

    <ScrollView
        android:id="@+id/Scroll_post"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header_post"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:id = "@+id/title_linear"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf = "@+id/add_pic"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/title"

                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/title_linear"
                    app:layout_constraintTop_toTopOf="@+id/title_linear" />

                <EditText
                    android:id="@+id/title_editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/title_linear"
                    android:hint = "Three eggs"
                    android:maxLength="50"/>

            </LinearLayout>

            <LinearLayout
                android:id = "@+id/description_linear"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf = "@+id/title_linear"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/description"

                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/description_linear"
                    app:layout_constraintTop_toTopOf="@+id/description_linear" />

                <EditText
                    android:id="@+id/description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/dscription_linear"
                    android:hint="@string/describe_your_need"/>

            </LinearLayout>


            <LinearLayout
                android:id = "@+id/quantity_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf = "@+id/description_linear"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/quantity"

                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/quantity_linear"
                    app:layout_constraintTop_toTopOf="@+id/quantity_linear" />
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id = "@+id/quantityBottonLinear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf = "@+id/quantity"
                        android:layout_marginTop="8dp"
                        android:minHeight="70dp">
                        <RadioGroup
                            android:id="@+id/radioGroupQuantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/button1"
                                android:layout_width="90dp"
                                android:layout_height="60dp"
                                android:textSize="20dp"
                                android:text="@string/radiobtn1"
                                android:layout_margin="5dp"
                                android:background="@drawable/rounded_button" />

                            <RadioButton
                                android:id="@+id/button2"
                                android:layout_width="90dp"
                                android:layout_height="60dp"
                                android:textSize="20dp"
                                android:text="@string/radiobtn2"
                                android:layout_margin="5dp"
                                android:background="@drawable/rounded_button"/>

                            <RadioButton
                                android:id="@+id/button3"
                                android:layout_width="90dp"
                                android:layout_height="60dp"
                                android:textSize="20dp"
                                android:text="@string/radiobtn3"
                                android:layout_margin="5dp"
                                android:background="@drawable/rounded_button"/>
                            <RadioButton
                                android:id="@+id/radioButtonOther"
                                android:layout_width="90dp"
                                android:layout_height="60dp"
                                android:textSize="20dp"
                                android:text="@string/radiobtn4"
                                android:background="@drawable/rounded_button"
                                android:layout_margin="5dp"/>
                        </RadioGroup>
                        <EditText
                            android:id="@+id/editTextOther"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:hint="@string/radiobtn4"
                            android:textSize="18sp"
                            android:layout_marginLeft="5dp"
                            android:padding="10dp"
                            android:gravity="center_vertical"
                            app:layout_constraintBottom_toBottomOf = "parent"
                            android:layout_marginBottom="0dp"/>

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:id = "@+id/Address_linear"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf = "@+id/quantity_linear"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/Address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/address"

                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/Address_linear"
                    app:layout_constraintTop_toTopOf="@+id/Address_linear" />

                <EditText
                    android:id="@+id/Address_editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/Address_linear"
                    android:hint = "@string/address_wanted"/>
                <Button
                    android:id="@+id/confirm_button"
                    android:text="@string/choosebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    app:layout_constraintTop_toBottomOf="@+id/map"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_btn"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toBottomOf="@+id/Address_linear"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="25dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>